--- a/index.html
+++ b/index.html
@@ -4,11 +4,46 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Spot</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <main>
-    
-  </main>
+  <div class="overlay">
+    <div class="container">
+      <header class="header">
+        <h1 class="visually-hidden">Spot transportation managment system</h1>
+        <nav class="header__nav">
+          <a href="index.html" class="header__logo">
+            <span class="header__logo-text">SPOT</span>
+            <span class="header__logo-round"></span>
+          </a>
+          <div class="header__item">
+            <a href="login.html" class="header__logo">Sign in</a>
+          </div>
+          <div class="header__item">
+            <a href="login.html" class="header__logo">Sign up</a>
+          </div>
+        </nav>
+      </header>
+
+      <main class="main">
+        <section class="promo">
+          <div class="promo__container">
+            <div class="promo__item">
+              <h3 class="promo__text">Easy to learn, easy to master transport managing system</h3> 
+              <button class="promo__button">Sign in</button>
+            </div>
+            <div class="promo__item">
+              
+            </div>
+          </div>
+        </section>
+      </main>
+
+      <footer class="footer">
+
+      </footer>
+    </div>
+  </div>
 </body>
 </html>
