--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spot</title>
   <link rel="stylesheet" href="css/style.css">
+  <script defer src="js/main.js"></script>
 </head>
 <body>
   <div class="overlay">
@@ -27,17 +28,49 @@
       </header>
 
       <main class="main">
-        <section class="promo">
-          <div class="promo__container">
-            <div class="promo__item">
-              <h3 class="promo__text">Easy to learn, easy to master transport managing system</h3> 
-              <button class="promo__button">Sign in</button>
+        <section class="hero">
+          <div class="hero__container">
+            <div class="hero__item">
+              <h3 class="hero__text">Easy to learn, easy to master transport managing system</h3>
+              <div class="hero__text-small">
+                <div>This page is basiced on:</div>
+                <ul class="hero__list">
+                  <li class="hero__items">Postioning: Flexbox</li>
+                  <li class="hero__items">Vanilla JS: Spoiler </li>
+                  <li class="hero__items">Style: SASS</li>
+                </ul>
+              </div>
+              <button class="hero__button">Sign in</button>
             </div>
-            <div class="promo__item">
-              
+            <div class="hero__item">
+              <div class="image"></div>
             </div>
           </div>
         </section>
+
+        <section class="advantages">
+          <div class="advantages__container">
+            <div class="h3">This web-app is basiced on</div>
+            <div class="advantages__cards">
+              <div class="advantages__card">
+                <h4 class="card__header">Basic CSS</h4>
+                <div class="card__icon"></div>
+                <div class="card__text"></div>
+              </div>
+              <div class="advantages__card">
+                <h4 class="card__header">Basic JS</h4>
+                <div class="card__icon"></div>
+                <div class="card__text"></div>
+              </div>
+              <div class="advantages__card">
+                <h4 class="card__header">Basic </h4>
+                <div class="card__icon"></div>
+                <div class="card__text"></div>
+              </div>
+            </div>
+          </div>
+        </section>
+
       </main>
 
       <footer class="footer">
