--- a/index.html
+++ b/index.html
@@ -10,26 +10,29 @@
 </head>
 <body>
   <div class="overlay">
-    <div class="container">
       <header class="header">
-        <h1 class="visually-hidden">Spot transportation managment system</h1>
-        <nav class="header__nav">
-          <a href="index.html" class="header__logo">
-            <span class="header__logo-text">SPOT</span>
-            <span class="header__logo-round"></span>
-          </a>
-          <div class="header__item">
-            <a href="login.html" class="header__logo">Sign in</a>
-          </div>
-          <div class="header__item">
-            <a href="login.html" class="header__logo">Sign up</a>
-          </div>
-        </nav>
+        <div class="container">
+          <h1 class="visually-hidden">Spot transportation managment system</h1>
+          <nav class="header__nav">
+            <a href="index.html" class="header__logo">
+              <span class="header__logo-text">SPOT</span>
+              <span class="header__logo-round"></span>
+            </a>
+            <div class="header__login-buttons-group">
+              <div class="header__item">
+                <a href="login.html" class="header__login-button">Sign in</a>
+              </div>
+              <div class="header__item">
+                <a href="login.html" class="header__login-button">Sign up</a>
+              </div>
+            </div>
+          </nav>
+        </div>
       </header>
 
       <main class="main">
         <section class="hero">
-          <div class="hero__container">
+          <div class="hero__container container">
             <div class="hero__item">
               <h3 class="hero__text">Easy to learn, easy to master transport managing system</h3>
               <div class="hero__text-small">
@@ -49,7 +52,7 @@
         </section>
 
         <section class="advantages">
-          <div class="advantages__container">
+          <div class="advantages__container container">
             <div class="h3">This web-app is basiced on</div>
             <div class="advantages__cards">
               <div class="advantages__card">
@@ -76,7 +79,6 @@
       <footer class="footer">
 
       </footer>
-    </div>
   </div>
 </body>
 </html>
