--- a/index.html
+++ b/index.html
@@ -36,16 +36,11 @@
             <div class="hero__item">
               <h3 class="hero__text">Easy to learn, easy to master transport managing system</h3>
               <div class="hero__text-small">
-                <div>This page is basiced on:</div>
-                <ul class="hero__list">
-                  <li class="hero__items">Postioning: Flexbox</li>
-                  <li class="hero__items">Vanilla JS: Spoiler </li>
-                  <li class="hero__items">Style: SASS</li>
-                </ul>
+                This pet project was built by Zhernenkov Vasiliy.<br>The main aim of the project is to simplify fleet management and allow transport companies to take orders faster. 
               </div>
-              <button class="hero__button">Sign in</button>
+              <a href="login.html" class="header__login-button">Sign in</a>
             </div>
-            <div class="hero__item">
+            <div class="hero__item hero__image">
               <div class="image"></div>
             </div>
           </div>
