--- a/index.html
+++ b/index.html
@@ -45,34 +45,15 @@
             </div>
           </div>
         </section>
-
-        <section class="advantages">
-          <div class="advantages__container container">
-            <div class="h3">This web-app is basiced on</div>
-            <div class="advantages__cards">
-              <div class="advantages__card">
-                <h4 class="card__header">Basic CSS</h4>
-                <div class="card__icon"></div>
-                <div class="card__text"></div>
-              </div>
-              <div class="advantages__card">
-                <h4 class="card__header">Basic JS</h4>
-                <div class="card__icon"></div>
-                <div class="card__text"></div>
-              </div>
-              <div class="advantages__card">
-                <h4 class="card__header">Basic </h4>
-                <div class="card__icon"></div>
-                <div class="card__text"></div>
-              </div>
-            </div>
-          </div>
-        </section>
-
       </main>
 
       <footer class="footer">
-
+        <div class="footer__container container">
+          <a href="index.html" class="footer__logo">
+            <span class="footer__logo-text">SPOT</span>
+            <span class="footer__logo-round"></span>
+          </a>
+        </div>
       </footer>
   </div>
 </body>
