--- a/login.html
+++ b/login.html
@@ -27,11 +27,11 @@
           <div class="hero__container container">
             <div class="hero__item">
               <h2 class="form-header">Log in</h2>
-              <form action="#" method="post" class="hero__form">
-                <input class="form__input" type="email" placeholder="Email" id="email">
-                <input class="form__input" type="password" placeholder="Password" id="password">
-                <input class="form__input" type="text" placeholder="Company name" id="company">
-                <button class="form__button" type="submit">Go to the SPOT<span class="header__logo-round header__logo-round_login-edition"></span></button>
+              <form action="#" method="post" class="hero__form login__form">              
+                <input required class="form__input" type="email" placeholder="Email" id="email">
+                <input required class="form__input" type="password" placeholder="Password" id="password">
+                <input required class="form__input" type="text" placeholder="Company name" id="company">
+                <a href="#" class="form__button" id="login" type="submit">Go to the SPOT<span class="header__logo-round header__logo-round_login-edition"></span></a>
                 <a href="register.html" class="hero__go-to-register">I dont have an account</a>
               </form>
             </div>
