--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
                 <input required class="form__input" type="email" placeholder="Email" id="email">
                 <input required class="form__input" type="password" placeholder="Password" id="password">
                 <input required class="form__input" type="text" placeholder="Company name" id="company">
-                <a href="#" class="form__button" id="login" type="submit">Go to the SPOT<span class="header__logo-round header__logo-round_login-edition"></span></a>
+                <a href="index.html" class="form__button" id="login" type="submit">Go to the SPOT<span class="header__logo-round header__logo-round_login-edition"></span></a>
                 <a href="register.html" class="hero__go-to-register">I dont have an account</a>
               </form>
             </div>
