--- a/register.html
+++ b/register.html
@@ -52,7 +52,7 @@
                 <div class="form__group">
                   <input required class="form__input" type="text" placeholder="Company name" id="company">
                 </div>
-                <a href="#" class="form__button" id="register">Join to the SPOT<span class="header__logo-round header__logo-round_login-edition"></span></a>
+                <a href="index.html" class="form__button" id="register">Join to the SPOT<span class="header__logo-round header__logo-round_login-edition"></span></a>
                 <a href="login.html" class="hero__go-to-register">I have an account</a>
                 <div class="form__password-block">
                   <span class="password__header">Password should contain:</span>
