--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             </a>
             <div class="header__login-buttons-group">
               <div class="header__item">
-                <a href="login.html" class="header__login-button">Sign in</a>
+                <a href="login.html" class="header__login-button">Log in</a>
               </div>
-              <div class="header__item">
+              <!-- <div class="header__item">
                 <a href="register.html" class="header__login-button">Sign up</a>
-              </div>
+              </div> -->
             </div>
           </nav>
         </div>
@@ -38,7 +38,7 @@
               <div class="hero__text-small">
                 This pet project was built by Zhernenkov Vasiliy.<br>The main aim of the project is to simplify fleet management and allow transport companies to take orders faster. 
               </div>
-              <a href="login.html" class="header__login-button">Sign in</a>
+              <a href="register.html" class="header__login-button hero__button">Join us</a>
             </div>
             <div class="hero__item hero__image">
               <div class="image"></div>
