--- a/transport.html
+++ b/transport.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Spot</title>
+  <title>Transport</title>
   <link rel="stylesheet" href="css/style.css">
   <script defer src="js/main.js"></script>
 </head>
@@ -28,10 +28,10 @@
             <div class="transport__add-panel">
               <h2 class="transport__list-header">Add your truck</h2>
               <form action="#" method="post" class="transport__form">
-                <input class="form__input form__input_transport" type="text" placeholder="Truck">
-                <input class="form__input form__input_transport" type="text" placeholder="Truck number">
-                <input class="form__input form__input_transport" type="text" placeholder="Current location">
-                <input class="form__input form__input_transport" type="text" placeholder="Driver">
+                <input required class="form__input form__input_transport" type="text" placeholder="Truck">
+                <input required class="form__input form__input_transport" type="text" placeholder="Truck number">
+                <input required class="form__input form__input_transport" type="text" placeholder="Current location">
+                <input required class="form__input form__input_transport" type="text" placeholder="Driver">
                 <div class="transport__type-block form__input_transport">
                   <input type="radio" name="trailer" id="">REF
                   <input type="radio" name="trailer" id="">TILT
