--- a/transport.html
+++ b/transport.html
@@ -27,23 +27,40 @@
           <div class="transport__block add__block">
             <div class="transport__add-panel">
               <h2 class="transport__list-header">Add your truck</h2>
-              <form action="#" method="post" class="transport__form">
-                <input required class="form__input form__input_transport" type="text" placeholder="Truck">
-                <input required class="form__input form__input_transport" type="text" placeholder="Truck number">
-                <input required class="form__input form__input_transport" type="text" placeholder="Current location">
-                <input required class="form__input form__input_transport" type="text" placeholder="Driver">
-                <div class="transport__type-block form__input_transport">
-                  <input type="radio" name="trailer" id="">REF
-                  <input type="radio" name="trailer" id="">TILT
+              <form action="#" method="post" id="transport__form" class="transport__form">
+                <div class="form__group">
+                  <label class="form__error-label label-for-name" for="name"></label>
+                  <input required class="form__input" type="text" placeholder="Truck name" id="truck__name">
                 </div>
-                <button type="submit" class="transport__add form__button">Add driver</button>
+
+                <div class="form__group">
+                  <label class="form__error-label label-for-name" for="name"></label>
+                  <input required class="form__input" type="text" placeholder="Truck driver" id="truck__driver">
+                </div>
+
+                <div class="form__group">
+                  <label class="form__error-label label-for-name" for="name"></label>
+                  <input required class="form__input" type="text" placeholder="Truck number" id="truck__number">
+                </div>
+
+                <div class="form__group">
+                  <label class="form__error-label label-for-name" for="name"></label>
+                  <input required class="form__input" type="text" placeholder="Current location" id="truck__location">
+                </div>
+
+                <div class="transport__type-block">
+                  <label for="trailer">Type of truck:</label>
+                  <input required class="form__radio" type="radio" name="trailer" id="REF">REF
+                  <input required class="form__radio" type="radio" name="trailer" id="TILT">TILT
+                </div>
+                <button id="add__truck" type="submit" class="transport__add form__button">Add driver</button>
               </form>
             </div>
           </div>
           <div class="transport__block list__block">
             <h2 class="transport__list-header">Your fleet</h2>
             <ul class="transport__list">
-              <li class="transport__item">
+              <!-- <li class="transport__item">
                 <div class="transport__card">
                   <div class="transport__card-header">
                     <h3 class="transport__driver">Vasiliy Zhernenkov</h3>
@@ -61,7 +78,7 @@
                     </div>
                   </div>
                 </div>
-              </li>
+              </li> -->
             </ul>
           </div>
         </div>
