--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
               <form action="#" method="post" class="hero__form login__form">              
                 <input required class="form__input" type="email" placeholder="Email" id="email">
                 <input required class="form__input" type="password" placeholder="Password" id="password">
-                <a href="index.html" class="form__button" id="login" type="submit">Go to the SPOT<span class="header__logo-round header__logo-round_login-edition"></span></a>
+                <a href="transport.html" class="form__button" id="login" type="submit">Go to the SPOT<span class="header__logo-round header__logo-round_login-edition"></span></a>
                 <a href="register.html" class="hero__go-to-register">I dont have an account</a>
               </form>
             </div>
