--- a/transport.html
+++ b/transport.html
@@ -35,7 +35,7 @@
 
                 <div class="form__group">
                   <label class="form__error-label label-for-name" for="name"></label>
-                  <input required class="form__input" type="text" placeholder="Truck driver" id="truck__driver">
+                  <input required class="form__input" type="text" placeholder="Driver name" id="truck__driver">
                 </div>
 
                 <div class="form__group">
@@ -45,7 +45,7 @@
 
                 <div class="form__group">
                   <label class="form__error-label label-for-name" for="name"></label>
-                  <input required class="form__input" type="text" placeholder="Current location" id="truck__location">
+                  <input required class="form__input" type="text" placeholder="Current truck location" id="truck__location">
                 </div>
 
                 <div class="transport__type-block">
