--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
               <a href="register.html" class="header__login-button hero__button">Join us</a>
             </div>
             <div class="hero__item hero__image">
-              <div class="image"></div>
+              <div class="image">
+                <img class="main__image" src="img/img1.png" alt="">
+              </div>
             </div>
           </div>
         </section>
