--- a/login.html
+++ b/login.html
@@ -35,7 +35,9 @@
               </form>
             </div>
             <div class="hero__item hero__image">
-              <div class="image"></div>
+              <div class="image">
+                <img class="main__image" src="img/img1.png" alt="">
+              </div>
             </div>
           </div>
         </section>
