--- a/register.html
+++ b/register.html
@@ -65,7 +65,9 @@
             
             </div>
             <div class="hero__item hero__image">
-              <div class="image"></div>
+              <div class="image">
+                <img class="main__image" src="img/img1.png" alt="">
+              </div>
             </div>
           </div>
         </section>
