--- a/transportmain.html
+++ b/transportmain.html
@@ -38,7 +38,7 @@
       <main class="transport__main">
         <div class="transport__container container">
           <div class="orders__block orders__menu">
-              <h2 class="transport__list-header">Vacant</h2>
+              <h2 class="transport__list-header transport__list-header-margin">Vacant</h2>
               <ul class="orders__menu-list">
                 <li class="orders__menu-item">
                   <a href="#" class="order__menu-link">Active</a>
@@ -47,12 +47,12 @@
                   <a href="#" class="order__menu-link">Completed</a>
                 </li>
                 <li class="orders__menu-item">
-                  <a href="#" class="order__menu-link">Completed</a>
+                  <a href="#" class="order__menu-link">Need to confirm</a>
                 </li>
               </ul>
           </div>
           <div class="orders__block orders__list">
-            <h2 class="transport__list-header">Orders</h2>
+            <h2 class="transport__list-header transport__list-header-margin">Orders</h2>
             <div class="orders__header">
                 <div class="order__cards-header order__cards-header-id">ID</div>
                 <div class="order__cards-header order__cards-header-from">From</div>
@@ -64,15 +64,25 @@
             </div>
             <ul class="orders">
               <li class="order__cart">
-                <div class="order__description order__id">ID:123</div>
-                <div class="order__description order__from">Buenos Aires</div>
-                <div class="order__description order__to">Cordoba</div>
-                <div class="order__description order__type">REF</div>
-                <div class="order__description order__cargo">Fruits <span class="order__temperar">+5</span></div>
-                <div class="order__description order__load-date">10.07.2023</div>
-                <div class="order__description order__unload-date">15.07.2023</div>
-                <button class="order__more-info-button">More info</button>
-                <button class="order__pick-up-button">Book</button>
+                <div class="order__description order__id">AR123</div>
+                <div class="order__direction">
+                  <div class="order__description order__from">Buenos Aires</div>
+                  <div class="order__dash"></div>
+                  <div class="order__description order__to">Cordoba</div>
+                </div>
+                <div class="order__cargo-block">
+                  <div class="order__description order__type">REF 20</div>
+                  <div class="order__description order__cargo">Fruits <span class="order__temperature">+5</span></div>
+                </div>
+                <div class="order__dates">
+                  <div class="order__description order__load-date">10.07.2023</div>
+                  <div class="order__dash"></div>
+                  <div class="order__description order__unload-date">15.07.2023</div>
+                </div>
+                <div class="order__buttons">
+                  <button class="order__more-info-button">More info</button>
+                  <button class="order__pick-up-button">Book</button>
+                </div>
               </li>
             </ul>
           </div>
