--- a/fleet/index.html
+++ b/fleet/index.html
@@ -4,29 +4,29 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Transport</title>
-  <link rel="stylesheet" href="css/style.css">
-  <script defer src="js/main.js"></script>
+  <title>Fleet</title>
+  <link rel="stylesheet" href="../css/style.css">
+  <script defer src="../js/main.js"></script>
 </head>
 <body>
   <div class="overlay">
       <header class="header transport__header">
-        <div class="container">
+        <div class="container container_less-padding">
           <h1 class="visually-hidden">Spot transportation managment system</h1>
           <nav class="header__nav">
-            <a href="transportmain.html" class="header__logo">
+            <a href="../orders/" class="header__logo">
               <span class="header__logo-text">SPOT</span>
               <span class="header__logo-round"></span>
             </a>
             <ul class="side__list">
               <li class="side__item">
-                <a href="transportmain.html" class="side__link">Orders</a>
+                <a href="../orders/" class="side__link">Orders</a>
               </li>
               <li class="side__item">
-                <a href="finance.html" class="side__link">Finance</a>
+                <a href="../finance/" class="side__link">Finance</a>
               </li>
               <li class="side__item">
-                <a href="transport.html" class="side__link link__active">My fleet (demo)</a>
+                <a href="../fleet/" class="side__link link__active">My fleet (demo)</a>
               </li>
             </ul>
           </nav>
@@ -34,7 +34,7 @@
       </header>
 
       <main class="transport__main">
-        <div class="transport__container container">
+        <div class="transport__container container container_less-padding">
           <div class="transport__block add__block">
             <div class="transport__add-panel">
               <h2 class="transport__list-header transport__list-header-margin">Add your truck</h2>
@@ -99,8 +99,8 @@
       </main>
 
       <footer class="footer">
-        <div class="footer__container container">
-          <a href="index.html" class="footer__logo">
+        <div class="footer__container container_less-padding container">
+          <a href="../orders/" class="footer__logo">
             <span class="footer__logo-text">SPOT</span>
             <span class="footer__logo-round"></span>
           </a>
