--- a/register/index.html
+++ b/register/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register</title>
-  <link rel="stylesheet" href="css/style.css">
-  <script defer src="js/main.js"></script>
+  <link rel="stylesheet" href="../css/style.css">
+  <script defer src="../js/main.js"></script>
 </head>
 <body>
   <div class="overlay">
@@ -14,7 +14,7 @@
         <div class="container">
           <h1 class="visually-hidden">Spot transportation managment system</h1>
           <nav class="header__nav">
-            <a href="index.html" class="header__logo">
+            <a href="../spot/" class="header__logo">
               <span class="header__logo-text">SPOT</span>
               <span class="header__logo-round"></span>
             </a>
@@ -57,8 +57,8 @@
                   <span class="password__message number">- At least one number</span>
                 </div>
 
-                <a href="index.html" class="form__button" id="register">Join to the SPOT<span class="header__logo-round header__logo-round_login-edition"></span></a>
-                <a href="login.html" class="hero__go-to-register">I have an account</a>
+                <a href="../orders/" class="form__button" id="register">Join to the SPOT<span class="header__logo-round header__logo-round_login-edition"></span></a>
+                <a href="../login/" class="hero__go-to-register">I have an account</a>
               </form>
             
             
@@ -66,7 +66,7 @@
             </div>
             <div class="hero__item hero__image">
               <div class="image">
-                <img class="main__image" src="img/img1.png" alt="">
+                <img class="main__image" src="../img/img1.png" alt="">
               </div>
             </div>
           </div>
@@ -75,7 +75,7 @@
 
       <footer class="footer">
         <div class="footer__container container">
-          <a href="index.html" class="footer__logo">
+          <a href="../spot/" class="footer__logo">
             <span class="footer__logo-text">SPOT</span>
             <span class="footer__logo-round"></span>
           </a>
